Generate version set. E.g: v1, v1.1, v1.1.5
