# src/semver/handler/semver_handler.go
@@ -1,10 +1,10 @@
 package handler
 
 import (
+	"github.com/satori/go.uuid"
 	"golang.org/x/net/context"
 	"semver/generator"
 	proto "semver/proto/semver"
-	"github.com/satori/go.uuid"
 )
 
 //SemverHandler is a handler for generate version
@@ -15,7 +15,19 @@ type SemverHandler struct {
 //Generate new version tag for project
 func (h *SemverHandler) Generate(ctx context.Context, req *proto.GenerateRequest, rsp *proto.GenerateResponse) error {
 	projectUUID := uuid.FromStringOrNil(req.ProjectUuid)
-	rsp.Version = h.Generator.GenerateVersion(projectUUID, req.Major, req.Minor, req.Branch)
+	tagSet := h.Generator.GenerateVersion(projectUUID, req.Major, req.Minor, req.Branch)
+	rsp.IsLatest = tagSet.IsLatest
+	rsp.Full = tagSet.Full
+	if nil != tagSet.Major {
+		rsp.Major = *tagSet.Major
+	}
+	if nil != tagSet.Minor {
+		rsp.Minor = *tagSet.Minor
+	}
+
+	if nil != tagSet.Branch {
+		rsp.Branch = *tagSet.Branch
+	}
 
 	return nil
 }
